<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/txt_cost"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:hint="@string/txt_cost"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="9dp"
        android:text="@string/txt_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txt_cost" />

    <RadioGroup
        android:id="@+id/radioBtn_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/radioBtn_amazing"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/txt_question"
        app:layout_constraintTop_toBottomOf="@id/txt_question">

        <RadioButton
            android:id="@+id/radioBtn_amazing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioBtn_amazing" />

        <RadioButton
            android:id="@+id/radioBtn_good"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioBtn_good" />

        <RadioButton
            android:id="@+id/radioBtn_okay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioBtn_okay" />
    </RadioGroup>

    <Switch
        android:id="@+id/switch_round_up"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/switch_round_up_txt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/radioBtn_group"
        app:layout_constraintTop_toBottomOf="@id/radioBtn_group"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btn_calculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/btn_calculate"
        app:backgroundTint="@color/btn_green"
        app:layout_constraintTop_toBottomOf="@id/switch_round_up"
         />

    <TextView
        android:id="@+id/txt_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="Tip amount: $10.00"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_calculate" />


</androidx.constraintlayout.widget.ConstraintLayout>